# solomiro

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  scrape_cars.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  database.py  main.py  models.py  schemas.py
backend/app/data/: cars.json
backend/app/routers/: __init__.py  advisor.py  leads.py
backend/app/services/: __init__.py  ai_service.py  calculator.py  recommender.py
backend/config/: __init__.py  settings.py
backend/tests/: conftest.py  test_api.py  test_calculator.py  test_recommender.py
frontend/: jest.config.js  package-lock.json  package.json
frontend/__mocks__/: nextFontMock.js
frontend/app/: layout.tsx  page.tsx
frontend/app/advisor/: page.tsx
frontend/app/result/: page.tsx
frontend/components/: CarForm.tsx  LeadCapture.tsx  RecommendationCard.tsx  ScoreBar.tsx
frontend/lib/: api.ts
